<resources>
    <string name="app_name">FoodAppp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="question_logout">Bạn muốn đăng xuất tài khoản này?</string>
    <string name="no">Không</string>
    <string name="yes">Có</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_restaurant_app">My Restaurant App</string>
    <string name="hello_explore_your_dream_food">hello explore your dream food</string>
    <string name="register">Register</string>
    <string name="unlock">Unlock</string>
    <string name="unlock_failed">Failed to Unlock the app.</string>
    <string name="confirm_pattern">Confirm your screen lock PIN , Pattern or Password</string>

    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="daily_meal">Daily meal</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My cart</string>
    <string name="zphuongkhoaz_gmail_com">zphuongkhoaz@gmail.com</string>
    <string name="nguyen_phuong_khoa">Nguyen Phuong Khoa</string>
    <string name="_10_00_23_00">10:00 - 23:00</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="setting">Setting</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_favorite">FavoriteActivity</string>
</resources>