<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu_home"

            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_daily_meal"
            android:icon="@drawable/menu_daily"
            android:title="@string/daily_meal" />


        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/favorite"
            
            android:title="@string/favourite" />

        <item
            android:id="@+id/nav_my_cart"
            android:icon="@drawable/cart_menu"
            android:title="@string/my_cart" />


        <item
            android:id="@+id/settingFragment"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/setting" />
    </group>
</menu>