<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.foodappp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_daily_meal"
        android:name="com.example.foodappp.ui.gallery.DailyMealFragment"
        android:label="@string/daily_meal"
        tools:layout="@layout/fragment_daily_meal_" />

    <fragment
        android:id="@+id/nav_favourite"
        android:name="com.example.foodappp.ui.slideshow.FavouriteFragment"
        android:label="@string/favourite"
        tools:layout="@layout/favourite_fragment" />
    <fragment
        android:id="@+id/myCartFragment"
        android:name="com.example.foodappp.MyCartFragment"
        android:label="@string/my_cart"
        tools:layout="@layout/fragment_my_cart" />
    <fragment
        android:id="@+id/settingFragment"
        android:name="com.example.foodappp.SettingFragment"
        android:label="fragment_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>